2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add progress updates to copy.
	Make some error dialogs more consistent (add skip all, reorder)
	
        * libnautilus-private/nautilus-progress-info.[ch]:
	Add nautilus_progress_info_set_status_printf

2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Don't create dest dir on merges
	
2007-11-21  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Handle recursive copies

2007-11-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Pass in same_fs instead of dest_fs_id so we can
	reuse copy_file recursively and only check once.

2007-11-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	More work on file copies

2007-11-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add error handling for source scanning

2007-11-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.[ch]:
	Add nautilus_get_all_progress_info()
	
        * test/test-copy.c:
	Print progress info
	
        * libnautilus-private/nautilus-file-operations.c:
	Implement generic run_simple_dialog()

2007-11-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Add generic run_simple_dialog.

2007-11-16  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-progress-info.c:
	Fix signal emissions

        * libnautilus-private/nautilus-file-operations.[ch]:
	Add nautilus_file_operations_copy, with some initial
	(far from done) code
	
        * test/Makefile.am:
        * test/test-copy.c:
	nautilus_file_operations_copy testcase

2007-11-16  Alexander Larsson  <alexl@redhat.com>
